# Ghostcode

./: .gitignore  pyproject.toml  requirements.txt
paypal_digest/: __main__.py  config.py  content.py  digest.py  fetchers.py  summarizer.py
